--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <h2 id="exhibitions">Выставки и события</h2>
                 <div class="exhibitions__filters" aria-label="Фильтр выставок и событий" aria-controls="exhibition-list">
                     <button
-                        class="exhibitions__filter-item active"
+                        class="exhibitions__filter active"
                         type="button"
                         aria-selected="true"
                         data-id="all"
@@ -77,7 +77,7 @@
                         Все
                     </button>
                     <button
-                        class="exhibitions__filter-item"
+                        class="exhibitions__filter"
                         type="button"
                         aria-selected="false"
                         data-id="today"
@@ -86,7 +86,7 @@
                         Сегодня
                     </button>
                     <button
-                        class="exhibitions__filter-item"
+                        class="exhibitions__filter"
                         type="button"
                         aria-selected="false"
                         data-id="tomorrow"
