--- a/index.html
+++ b/index.html
@@ -63,6 +63,49 @@
                 <a role="menuitem" class="nav__menu-item" href="/online-shop">Онлайн-магазин</a>
             </div>
         </nav>
+        <section class="carousel" aria-roledescription="carousel" aria-labelledby="carousel">
+            <h2 id="carousel" class="visually-hidden">Анонсы выставок</h2>
+            <div class="carousel__container">
+                <fieldset class="carousel__controls" aria-controls="carousel">
+                    <legend class="visually-hidden">Кнопки управления каруселью</legend>
+                    <button
+                        class="carousel__controls-item previous"
+                        type="button"
+                        id="previous"
+                        aria-label="Предыдущий слайд"
+                    >
+                        <img src="images/carousel/controls/prev.png" alt="" role="presentation">
+                    </button>
+                    <button
+                        class="carousel__controls-item next"
+                        type="button"
+                        id="next"
+                        aria-label="Следующий слайд"
+                    >
+                        <img src="images/carousel/controls/next.png" alt="" role="presentation">
+                    </button>
+                
+                </fieldset>
+                <div id="action" class="visually-hidden">Купить билет онлайн на</div>
+                <ul class="carousel__slides" aria-live="polite">
+                    <li class="carousel__slide-item" aria-hidden="false" role="group" aria-roledescription="slide" aria-label="1 of 3">
+                        <img src="images/carousel/musayon.png" alt="" role="presentation">
+                        <div id="exhibition1" class="visually-hidden">Летнюю программу «Мусейона»</div>
+                        <a class="carousel__link" aria-labelledby="action exhibition1" href="/tickets">Билеты онлайн</a>
+                    </li>
+                    <li class="carousel__slide-item" aria-hidden="true" role="group" aria-roledescription="slide" aria-label="2 of 3">
+                        <img src="images/carousel/notpainting.png" alt="" role="presentation">
+                        <div id="exhibition2" class="visually-hidden">Выставку не живопись. Декоративно-прикладное искусство.</div>
+                        <a class="carousel__link" aria-labelledby="action exhibition2" href="/tickets">Билеты онлайн</a>
+                    </li>
+                    <li class="carousel__slide-item" aria-hidden="true" role="group" aria-roledescription="slide" aria-label="2 of 3">
+                        <img src="images/carousel/renaissance.png" alt="" role="presentation">
+                        <div id="exhibition3" class="visually-hidden">Выставку Сиена на заре ренесанса.</div>
+                        <a class="carousel__link" aria-labelledby="action exhibition3" href="/tickets">Билеты онлайн</a>
+                    </li>
+                </ul>
+            </div>
+        </section>
         <main role="main" id="content" class="container" tabindex="-1">
             <section aria-labelledby="exhibitions" class="exhibitions">
                 <h2 id="exhibitions">Выставки и события</h2>
