--- a/index.html
+++ b/index.html
@@ -86,21 +86,21 @@
                     </button>
                 
                 </fieldset>
-                <div id="action" class="visually-hidden">Купить билет онлайн на</div>
+                <div id="action" class="visually-hidden" role="presentation">Купить билет онлайн на</div>
                 <ul class="carousel__slides" aria-live="polite">
                     <li class="carousel__slide-item" aria-hidden="false" role="group" aria-roledescription="slide" aria-label="1 of 3">
                         <img src="images/carousel/musayon.png" alt="" role="presentation">
-                        <div id="exhibition1" class="visually-hidden">Летнюю программу «Мусейона»</div>
+                        <div id="exhibition1" class="visually-hidden" role="presentation">Летнюю программу «Мусейона»</div>
                         <a class="carousel__link" aria-labelledby="action exhibition1" href="/tickets">Билеты онлайн</a>
                     </li>
                     <li class="carousel__slide-item" aria-hidden="true" role="group" aria-roledescription="slide" aria-label="2 of 3">
                         <img src="images/carousel/notpainting.png" alt="" role="presentation">
-                        <div id="exhibition2" class="visually-hidden">Выставку не живопись. Декоративно-прикладное искусство.</div>
+                        <div id="exhibition2" class="visually-hidden" role="presentation">Выставку не живопись. Декоративно-прикладное искусство.</div>
                         <a class="carousel__link" aria-labelledby="action exhibition2" href="/tickets">Билеты онлайн</a>
                     </li>
                     <li class="carousel__slide-item" aria-hidden="true" role="group" aria-roledescription="slide" aria-label="2 of 3">
                         <img src="images/carousel/renaissance.png" alt="" role="presentation">
-                        <div id="exhibition3" class="visually-hidden">Выставку Сиена на заре ренесанса.</div>
+                        <div id="exhibition3" class="visually-hidden" role="presentation">Выставку Сиена на заре ренесанса.</div>
                         <a class="carousel__link" aria-labelledby="action exhibition3" href="/tickets">Билеты онлайн</a>
                     </li>
                 </ul>
