--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
                 <div class="exhibitions__filters" aria-label="Фильтр выставок и событий" aria-controls="exhibition-list">
                     <button
                         class="exhibitions__filter active"
-                        role="checkbox"
-                        checked="true"
+                        aria-selected="true"
                         data-id="all"
                         tab-index="0"
                     >
@@ -122,8 +121,7 @@
                     </button>
                     <button
                         class="exhibitions__filter"
-                        role="checkbox"
-                        checked="false"
+                        aria-selected="true"
                         data-id="today"
                         tab-index="-1"
                     >
@@ -131,8 +129,7 @@
                     </button>
                     <button
                         class="exhibitions__filter"
-                        role="checkbox"
-                        checked="false"
+                        aria-selected="true"
                         data-id="tomorrow"
                         tab-index="-1"
                     >
